Update styles and layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <section id="landing">
-    <nav>
+   <nav>
         <div class="nav__row">
             <div class="nav__logo"><img src="assets/treactlogo.webp" alt="Treact Logo">
         </div>
@@ -32,12 +32,11 @@
          <div class="container__about" id="about">
              <div class="row--about">
              <h1>Beautiful React <strong class="purple">Templates </strong>for you</h1>
-             <p>Our templates are easy to set up so<strong class="purple"> you won't need a human coder</strong> anymore!</strong></p>
+             <p>Our templates are easy to set up so<strong class="purple"> you won't need a human coder</strong> anymore!</p>
              </div>
              <div class="about__img">
              <img src="assets/treact main desk.svg"  alt="Treact Main Desk Illustration">       
             </div>
          </div>
-
 </body>
 </html>
