Update styling and layout

--- a/index.html
+++ b/index.html
@@ -43,16 +43,44 @@
     <section id="features">
          <div class="container__features" id="features">
              <div class="row--features">
-                <h2>Features</h2>
-                <p>Explore the variety of features that make our templates stand out.</p>
+                <h2><strong class="purple">Features</strong></h2>
+                <h1>We have Amazing <strong class="purple">Service.</strong></h1>
+                    <p>Explore the variety of features that make our templates stand out!</p>
              </div>
          </div>
     </section> 
     <section id="quality">
             <div class="container__quality" id="quality">
                 <div class="row--quality">
-                    <h2>Quality</h2>
-                    <p>Discover the high-quality standards we adhere to in our templates.</p>
+                <div>
+                    <img src="assets/service1.png" alt="Secure Service">
+                    <h2>Secure</h2>
+                    <p>We strictly deal with vendors tha provide top notch security.</p>
+                </div>
+                <div>
+                    <img src="assets/service2.png" alt="24/7 Support">      
+                    <h2>24/7 Support</h2>
+                    <p>We're always here for you!</p>
+                </div>
+                <div> 
+                    <img src="assets/serivice3.png" alt="Customizable">        
+                    <h2>Customizable</h2>
+                    <p>Stand out with unique designs tailored to your needs.</p>
+                </div>
+                <div>
+                    <img src="assets/service4.png" alt="Reliable Service">  
+                    <h2>Reliable</h2>
+                    <p>Our servers are dependable and always available.</p>
+                </div>
+                <div>
+                    <img src="assets/service5.png" alt="Fast Service">  
+                    <h2>Fast</h2>
+                    <p>Super speed that beats the competition.</p>
+                </div>
+                <div>
+                    <img src="assets/service6.png" alt="Easy Service">      
+                    <h2>Easy</h2>
+                    <p>DTF as drunk guys at the club.</p>
                 </div>
             </div>
     </section>
