Update styling and layout

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </div>
     </nav>
    </section>
-         <div class="container__about container" id="about">
+    <section id="about">
+         <div class="container__about container">
              <div class="row--about row">
              <h1>Beautiful React <strong class="purple">Templates </strong>for you</h1>
              <p>Our templates are easy to set up so<strong class="purple"> you won't need a human coder</strong> anymore!</p>
@@ -167,6 +168,8 @@
                     </p>
                   </div>
             </div>
+        </div>
+    </div>
     </section>
     <section id="values">
             <div class="container__values container">
@@ -178,7 +181,7 @@
             </div>
     </section>
     <section id="pricing">
-            <div class="container__pricing container>
+            <div class="container__pricing container">
                 <div class="row--pricing row">
                     <h4><strong class="purple">PRICING</strong></h4>
                     <p>Choose a pricing plan that fits your needs and budget.</p>
