Update styling and layout

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             </div>
         </div>
     </div>
+   </div>    
     </section>
     <section id="values">
             <div class="container__values container">
