--- a/index.html
+++ b/index.html
@@ -177,9 +177,21 @@
     <section id="values">
             <div class="container__values container">
                 <div class="row--values row">
-                    <h4><strong class="purple">OUR VALUES</strong></h4>
+                    <h4><strong class="purple">VALUES</strong></h4>
+                    <h1>We always abide by our <strong class="purple">Principles </strong></h1>
                     <p>Learn about the core values that drive our work and commitment to quality.</p>
                     <a href="#values" class="values__button values__anchor link__hover-effect link__hover-effect--black">Learn More</a>
+                </div>
+                <div class="values__list">
+                    <h2><strong class="purple">Affordable</strong></h2>
+                    <p>
+                      We promise the best rates, on par with industry standards.  
+                    </p>
+                    </div>
+                    <h2><strong class="purple">Professionalism</strong></h2>
+                    <p>
+                        We assure our templates are created by professional designers.
+                    </p>
                 </div>
             </div>
     </section>
