Update styling and layout

--- a/index.html
+++ b/index.html
@@ -188,10 +188,14 @@
                       We promise the best rates, on par with industry standards.  
                     </p>
                     </div>
+                    <div class="values__list">
                     <h2><strong class="purple">Professionalism</strong></h2>
                     <p>
                         We assure our templates are created by professional designers.
                     </p>
+                <figure class="value__img">
+                    <img src="assets/assets3.3/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="Coder Brainstorming">
+                </figure>
                 </div>
             </div>
     </section>
